first aggregate dataframe completed

--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "0          79          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,34 +133,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "81.87784018381414"
+       "65.17232575950983"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# total number of schools\n",
     "total_schools = school_data_complete.school_name.nunique()\n",
     "total_students = school_data_complete['Student ID'].nunique()\n",
     "\n",
-    "totalBudget = school_data['budget'].sum()\n",
-    "Budget_Formatted = '${:,.2f}'.format(totalBudget)\n",
+    "# total budget\n",
+    "total_budget = school_data['budget'].sum()\n",
+    "budget_formatted = '${:,.2f}'.format(total_budget)\n",
     "\n",
+    "# average math and reading scores\n",
     "avg_math = school_data_complete.math_score.mean()\n",
-    "avg_reading = school_data_complete.reading_score.mean()\n"
+    "avg_reading = school_data_complete.reading_score.mean()\n",
+    "\n",
+    "# percent passing math\n",
+    "passing_math = school_data_complete.loc[school_data_complete['math_score'] >69]\n",
+    "passing_math_perc = (len(passing_math)/len(school_data_complete)) * 100\n",
+    "\n",
+    "# percent passing reading\n",
+    "passing_reading = school_data_complete.loc[school_data_complete['reading_score'] >69]\n",
+    "passing_reading_perc = len(passing_reading)/len(school_data_complete) * 100\n",
+    "# round(passing_reading_perc, 2)\n",
+    "\n",
+    "# percent overall passing \n",
+    "passing_overall = school_data_complete.loc[(school_data_complete['reading_score'] >69) & (school_data_complete['math_score'] >69)]\n",
+    "passing_overall_percent = len(passing_overall)/len(school_data_complete) * 100\n",
+    "passing_overall_percent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -198,31 +215,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>15</td>\n",
-       "      <td>39,170</td>\n",
+       "      <td>39170</td>\n",
        "      <td>$24,649,428.00</td>\n",
-       "      <td>78.985371</td>\n",
-       "      <td>81.87784</td>\n",
-       "      <td>74.980853</td>\n",
-       "      <td>85.805463</td>\n",
-       "      <td>65.172326</td>\n",
+       "      <td>78.99</td>\n",
+       "      <td>81.88</td>\n",
+       "      <td>74.98</td>\n",
+       "      <td>85.81</td>\n",
+       "      <td>65.17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Total Schools Total Students    Total Budget  Average Math Score  \\\n",
-       "0             15         39,170  $24,649,428.00           78.985371   \n",
+       "   Total Schools  Total Students    Total Budget  Average Math Score  \\\n",
+       "0             15           39170  $24,649,428.00               78.99   \n",
        "\n",
        "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
-       "0               81.87784       74.980853          85.805463          65.172326  "
+       "0                  81.88           74.98              85.81              65.17  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# create a dictionary then dataframe using the aggregate variables created above\n",
+    "agg_dict = {\n",
+    "    \"Total Schools\": total_schools,\n",
+    "    \"Total Students\": total_students,\n",
+    "    \"Total Budget\": budget_formatted,\n",
+    "    \"Average Math Score\": round(avg_math, 2),\n",
+    "    \"Average Reading Score\": round(avg_reading, 2),\n",
+    "    \"% Passing Math\": round(passing_math_perc, 2),\n",
+    "    \"% Passing Reading\": round(passing_reading_perc, 2),\n",
+    "    \"% Overall Passing\": round(passing_overall_percent, 2)\n",
+    "}\n",
+    "agg_df = pd.DataFrame(agg_dict, index =[0])\n",
+    "agg_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
